[A3] Fully match spec

--- a/src/A3/spec/stats.html
+++ b/src/A3/spec/stats.html
@@ -1,27 +1,11 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html><head></head><body>
-
-<h2>GC Efficiency</h2>
-<table>
-<tr><th>broadcaster</th><th>nummsgs</th><th>teach-node-06:40190</th><th>teach-node-06:40290</th><th>teach-node-06:40390</th><th>teach-node-06:40490</th></tr>
-<tr><td>teach-node-06:40190</td><td>100</td><td>91</td><td>93</td><td>90</td><td>88</td></tr>
-<tr><td>teach-node-06:40290</td><td>5</td><td>100</td><td>100</td><td>100</td><td>100</td></tr>
-<tr><td>teach-node-06:40490</td><td>60</td><td>90</td><td>93.3333</td><td>88.3333</td><td>90</td></tr>
-</table>
-
-
-<script type="module" src="https://s.brightspace.com/lib/bsi/20.22.9-241/unbundled/mathjax.js"></script><script type="text/javascript">document.addEventListener('DOMContentLoaded', function() {
-					if (document.querySelector('math') || /\$\$|\\\(|\\\[|\\begin{|\\ref{|\\eqref{/.test(document.body.innerHTML)) {
-						document.querySelectorAll('mspace[linebreak="newline"]').forEach(elm => {
-							elm.setAttribute('style', 'display: block; height: 0.5rem;');
-						});
-
-						window.D2L.MathJax.loadMathJax({
-							'outputScale': 1.3,
-							'renderLatex': true
-						});
-					}
-				});</script><script type="module" src="https://s.brightspace.com/lib/bsi/20.22.9-241/unbundled/prism.js"></script><script type="text/javascript">document.addEventListener('DOMContentLoaded', function() {
-					document.querySelectorAll('.d2l-code').forEach(code => {
-						window.D2L.Prism.formatCodeElement(code);
-					});
-				});</script></body></html>
+<HTML>
+<BODY>
+<H2>GC Efficiency</H2>
+<TABLE>
+<TR><TH>broadcaster</TH><TH>nummsgs</TH><TH>teach-node-06:40190</TH><TH>teach-node-06:40290</TH><TH>teach-node-06:40390</TH><TH>teach-node-06:40490</TH></TR>
+<TR><TD>teach-node-06:40190</TD><TD>100</TD><TD>91</TD><TD>93</TD><TD>90</TD><TD>88</TD></TR>
+<TR><TD>teach-node-06:40290</TD><TD>5</TD><TD>100</TD><TD>100</TD><TD>100</TD><TD>100</TD></TR>
+<TR><TD>teach-node-06:40490</TD><TD>60</TD><TD>90</TD><TD>93.3333</TD><TD>88.3333</TD><TD>90</TD></TR>
+</TABLE>
+</BODY>
+</HTML>
